[package]
name = "collurgy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colcon = "0.2"
eframe = {version = "0.23", features=["wgpu"]}
rfd = "0.12"
serde = "1"
toml = "0.8"

[features]
builtins = []
default = ["builtins"]
