[package]
name = "collurgy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colcon = "0.3"
# disable wayland
eframe = {version = "0.24", default_features=false, features=["accesskit", "default_fonts", "x11", "wgpu"]}
rfd = "0.12"
serde = "1"
serde_json = "1"
toml = "0.8"

[features]
builtins = []
default = ["builtins"]
wayland = ["eframe/wayland"]
