[package]
name = "collurgy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colcon = "0.10"
# colcon = { git = "https://github.com/Beinsezii/colcon.git"}
# disable wayland
eframe = {version = "0.27", default_features=false, features=["accesskit", "default_fonts", "x11", "wgpu"]}
rfd = "0.14"
serde = {version = "1", features = ["std", "derive"]}
serde_json = "1"
toml = "0.8"

[features]
builtins = []
wayland = ["eframe/wayland"]
default = ["builtins", "wayland"]
